[package]
name = "discord_Music_Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "standard_framework", "voice","cache"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15.0"
songbird = { version = "0.4", features = ["builtin-queue"] }
reqwest = { version = "0.11.23", features = [] }
tracing-subscriber = "0.3.18"
async-trait = "0.1.75"
log = "0.4.20"


[dependencies.symphonia]
version = "0.5.3"
features = ["all"]
